tests/for1.err
20 FOR A$=1 to 10:NEXT
         ^
Error: numeric variable expected: A$
