tests/for1.bas
10 REM FOR WITH STRING VARIABLE
20 FOR A$=1 to 10:NEXT
